Mon Mar  1 20:32:06 2004  Tim Janik  <timj@gtk.org>

        * autogen.sh:
        - exit with $? instead of 1 in case of failure
        - exit with $? if ./configure failed
          (that's so autogen.sh && make lines work)
        - removed --enable-gtk-doc option
        - added $AUTOGEN_CONFIGURE_ARGS

2004-03-01  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (list_model_filter_func): Test for
	filter_info.uri correctly.  Fixes #135379, pointed out by Damon
	Chaplin.
	(shortcuts_get_index): Compute the bookmarks index correctly.
	Fixes #135714, pointed out by Damon Chaplin.
	(gtk_file_chooser_default_list_shortcut_folders): Handle the case
	with no shortcuts, and don't run off the end of the list if there
	are no bookmarks and their separator.  Fixes #135572, patch by
	Damon Chaplin.

Mon Mar  1 12:23:06 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c: Handle dynamically resolved bidi direction
	when drawing the cursor. (#118541)

	* gtk/gtkentry.c (get_better_cursor_x): Use entry->resolved_dir;

	* gtk/gtkentry.c (draw_insertion_cursor): Fix up
	some confusion in parameter ordering.

Mon Mar  1 12:05:54 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_resizable_hints_changed): Handle
	shrinking/growing.

2004-03-01  Michael Natterer  <mitch@gimp.org>

	* gtk/gtktextbtree.c: removed underscores from calls to
	gtk_text_btree_resolve_bidi().

Mon Mar  1 10:41:27 2004  Owen Taylor  <otaylor@redhat.com>

	Patch from Dov Grobgeld to implement auto-bidi-direction
	for GtkTextView (#118543)

	* gtk/gtktextbtree.[ch]: Resolve bidi base direction
	for each line by propagating backwards/forwards as
	necessary.

	* gtk/gtktextlayout.[ch] gtk/gtktextview.c: Set the 
	bidi base direction for the ;ine with the cursor from 
	the keyboard direction. Add gtk_text_layout_set_keyboard_direction().
	
Mon Mar  1 10:31:11 2004  Owen Taylor  <otaylor@redhat.com>
